got the navigation working

--- a/research/index.html
+++ b/research/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
-  <meta name="description" content="">
+  <title>Danny Yagan, Assistant Professor</title>
+  <meta name="description" content="Danny Yagan, Assistant Professor of Economics, UC Berkeley">
 
   <link rel="canonical" href="http://dannyyagan.com/research/">
 
@@ -14,17 +14,15 @@
 
   <link rel="stylesheet" href="/css/main.css">
 
-  <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 </head>
 
   <body>
     <div class="container">
-    
+
       <div class="page-header">
          <h1>Danny Yagan <small>Assistant Professor</small></h1>
       </div>
@@ -36,19 +34,79 @@
           <br />
 
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/bio/">Bio</a></li>
+            <li id="home"><a href="/">Home</a></li>
+            <li id="bio"><a href="/bio/">Bio</a></li>
             <li><a href="">CV</a></li>
-            <li><a href="/research/">Research</a></li>
-            <li><a href="/lectures/">Lectures</a></li>
+            <li id="research"><a href="/research/">Research</a></li>
+            <li id="lectures"><a href="/lectures/">Lectures</a></li>
           </ul>
 
         </div>
         <div class="col-md-8 col-md-offset-1">
           <h2>Research</h2>
+
+<h4 id="mobility">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility </h4>
+<p>Manuscript (January 2017), non-technical summary, slides, NYT data exploration tool, and press coverage.</p>
+
+<p>Abstract: We characterize rates of intergenerational income mobility at each college in the United States using administrative data for over 30 million college students from 1999-2013. We document four results. First, access to colleges varies greatly by parent income. For example, children whose parents are in the top 1% of the income distribution are 77 times more likely to attend an Ivy League college than those whose parents are in the bottom income quintile. Second, children from low and high-income families have very similar earnings outcomes conditional on the college they attend, indicating that there is little mismatch of low socioeconomic status students to selective colleges. Third, upward mobility rates – measured, for instance, by the fraction of students who come from families in the bottom income quintile and reach the top quintile – vary substantially across colleges. Much of this variation is driven by differences in the fraction of students from low-income families across colleges whose students have similar earnings outcomes. Mid-tier public universities such as the City University of New York and California State colleges tend to have the highest rates of bottom-to-top quintile mobility. Elite private colleges, such as Ivy League universities, have the highest rates of upper-tail (e.g., bottom quintile to top 1%) mobility. Finally, between the 1980 and 1991 birth cohorts, the fraction of students from bottom-quintile families fell sharply at colleges with high rates of bottom-to-top-quintile mobility, and did not change substantially at elite private institutions. Although our descriptive analysis does not identify colleges' causal effects on students' outcomes, the publicly available statistics constructed here highlight colleges that deserve further study as potential engines of upward mobility.</p>
+
+<h4>Is the Great Recession Really Over? Longitudinal Evidence of Enduring Employment Impacts</h4>
+<p>Manuscript (July 2016) and faster download version. Features by Washington Post and Wall Street Journal. Revise and resubmit at Journal of Political Economy.</p>
+
+<p>Abstract: The severity of the Great Recession varied across U.S. local areas. Comparing two million workers within firms across space, I find that starting the recession in a below-median 2007-2009-employment-shock area caused workers to be 1.0 percentage points less likely to be employed in 2014, relative to starting the recession elsewhere. This enduring impact holds even when controlling for current local unemployment rates, which have converged across space. The results reject secular nationwide skill-biased shocks like exogenous technical change as a full explanation for persistent post-2007 employment declines. Instead, the recession and its underlying causes depressed labor force participation and employment even after unemployment returned to normal.</p>
+
+<h4>Capital Tax Reform and the Real Economy: The Effects of the 2003 Dividend Tax Cut</h4>
+<p>American Economic Review 2015, lead article, volume 105(12) pp. 3531-3563. Manuscript, slides, appendix, replication zip file with adaptable code for firm-specific capital costs, and press.</p>
+
+<p>Abstract: This paper tests whether the 2003 dividend tax cut---one of the largest reforms ever to a U.S. capital tax rate---stimulated corporate investment and increased labor earnings, using a quasi-experimental design and U.S. corporate tax returns from years 1996-2008. I estimate that the tax cut caused zero change in corporate investment and employee compensation.  Economically, the statistical precision challenges leading estimates of the cost-of-capital elasticity of investment, or undermines models in which dividend tax reforms affect the cost of capital. Either way, it may be difficult to implement an alternative dividend tax cut that has substantially larger near-term effects.</p>
+
+<h4>How Does Your Kindergarten Classroom Affect Your Earnings? Evidence from Project STAR</h4>
+<p>(with Raj Chetty, John N. Friedman, Nathaniel Hilger, Emmanuel Saez, and Diane Whitmore Schanzenbach). Quarterly Journal of Economics 2011, lead article, volume 126(4) pp. 1593-1660. Manuscript, slides, appendix, summary for education professionals, and press.</p>
+
+<p>Abstract: In Project STAR, 11,571 students in Tennessee and their teachers were randomly assigned to classrooms within their schools from kindergarten to third grade. This article evaluates the long-term impacts of STAR by linking the experimental data to administrative records. We first demonstrate that kindergarten test scores are highly correlated with outcomes such as earnings at age 27, college attendance, home ownership, and retirement savings. We then document four sets of experimental impacts. First, students in small classes are significantly more likely to attend college and exhibit improvements on other outcomes. Class size does not have a significant effect on earnings at age 27, but this effect is imprecisely estimated. Second, students who had a more experienced teacher in kindergarten have higher earnings. Third, an analysis of variance reveals significant classroom effects on earnings. Students who were randomly assigned to higher quality classrooms in grades K-3---as measured by classmates' end-of-class test scores---have higher earnings, college attendance rates, and other outcomes. Finally, the effects of class quality fade out on test scores in later grades, but gains in noncognitive measures persist.</p>
+
+
+<h4>Optimal Taxation in Theory and Practice</h4>
+<p>(with N. Gregory Mankiw and Matthew Weinzierl)</p>
+<p>Journal of Economic Perspectives 2009, volume 23(4) pp. 147-174.</p>
+<p>Manuscript, appendix, and replication zip file.</p>
+
+<p>Abstract: We detail eight lessons from optimal tax theory and compare them to OECD tax policy over the last thirty years. We find that income and commodity taxes have moved toward standard optimal tax prescriptions: marginal income tax schedules have flattened, top marginal income tax rates have declined, and commodity taxes are more uniform and assessed on final goods. Trends in capital taxation are mixed, and rates are still well above the zero level recommended by theory. Tagging, asset-testing, and history-dependence remain rare. Discrepancies between theory and practice raise the question of whether policymakers need to learn from theorists or theorists need to learn from policymakers.</p>
+
+<h4>Business in the United States: Who Owns It and How Much Tax Do They Pay? (with Michael Cooper,
+     John McClelland, James Pearce, Richard Prisinzano, Joseph Sullivan, Owen Zidar, and Eric Zwick)</h4>
+<p>Tax Policy and the Economy 2016, volume 30 pp.91-128.<p>
+<p>Manuscript (NBER #21651), slides, data, summary for public, discussion with Jim Poterba, and press.</p>
+
+<p>Abstract: "Pass-through" businesses like partnerships and S-corporations now generate over half of U.S. business income and account for much of the post-1980 rise in the top-1% income share. We use administrative tax data from 2011 to identify pass-through business owners and estimate how much tax they pay. We present three findings. (1) Relative to traditional business income, pass-through business income is substantially more concentrated among high-earners. (2) Partnership ownership is opaque: 20% of the income goes to unclassifiable partners, and 15% of the income is earned in circularly owned partnerships. (3) The average federal income tax rate on U.S. pass-through business income is 19%---much lower than the average rate on traditional corporations. If pass-through activity had remained at 1980's low level, strong but straightforward assumptions imply that the 2011 average U.S. tax rate on total U.S. business income would have been 28% rather than 24%, and tax revenue would have been approximately $100 billion higher.</p>
+
+
+<h4>Supply vs. Demand under an Affirmative Action Ban: Estimates from UC Law Schools</h4>
+<p>Journal of Public Economics 2016, volume 137(May) pp. 38-50.</p>
+<p>Manuscript and appendix.</p>
+
+<p>Abstract: Affirmative action bans can reduce black enrollment not only by reducing black admission advantages (contracting demand) but also by reducing applications (contracting supply) from black students who can still gain admission but prefer alternative schools that still practice affirmative action. When affirmative action was banned at UC law schools, Berkeley's black applications and enrollment declined by almost half even as black admission rates rose relative to whites. I ask whether black enrollment at UC law schools would have markedly declined even if black supply had not contracted. I find in a large sample of students applying to law schools nationwide that black supply contractions were driven mostly or entirely by students unlikely to gain admission under the ban, yielding stronger post-ban black applicant pools. Holding applicant pools constant, I estimate that the ban reduced black admission rates at both Berkeley and UCLA by half. Hence, black enrollment would likely have plummeted even if black supply had not contracted---as could occur under a nationwide ban that eliminates affirmative-action-practicing alternatives.</p>
         </div>
       </div>
-
     </div>
   </body>
+
+  <script type="text/javascript">
+    if (!String.prototype.startsWith) {
+        String.prototype.startsWith = function(searchString, position){
+          position = position || 0;
+          return this.substr(position, searchString.length) === searchString;
+      };
+    }
+    var url = window.location;
+    if (url.pathname == '/') {
+        $('#home').addClass('active');
+    } else if (url.pathname.startsWith("/bio")) {
+        $("#bio").addClass('active');
+    } else if (url.pathname.startsWith("/research")) {
+        $("#research").addClass('active');
+    } else if (url.pathname.startsWith("/lectures")) {
+        $("#lectures").addClass('active');
+    }
+</script>
 </html>
