Minor tweaks to index, simplified bio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Danny Yagan, Assistant Professor</title>
+  <link rel="shortcut icon" href="http://eml.berkeley.edu/~yagan/americanflagicon3.png" type="image/gif" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>Danny Yagan | UC Berkeley Economics</title>
   <meta name="description" content="Danny Yagan, Assistant Professor of Economics, UC Berkeley">
 
   <link rel="canonical" href="http://dannyyagan.com/">
@@ -24,25 +26,27 @@
     <div class="container">
 
       <div class="page-header">
-         <h1>Danny Yagan <small>Assistant Professor</small></h1>
+         <h1>Danny Yagan 
+           <small>Assistant Professor</small>
+           <div align="right"> <img span class="img-responsive" src="assets/ucb_logo.png"> </div>
+           </h1>
       </div>
-
       <div class="row">
-        <div class="col-md-3">
-          <img class="img-responsive" src="/assets/headshot.jpg">
+        <div class="col-md-2">
+          <img class="img-responsive" src="assets/headshot.jpg">
 
           <br />
 
           <ul class="nav nav-pills nav-stacked">
             <li id="home"><a href="/">Home</a></li>
-            <li id="bio"><a href="/bio/">Bio</a></li>
+            <!-- <li id="bio"><a href="/bio/">Bio</a></li> -->
             <li><a href="">CV</a></li>
             <li id="research"><a href="/research/">Research</a></li>
             <li id="lectures"><a href="/lectures/">Lectures</a></li>
           </ul>
 
         </div>
-        <div class="col-md-8 col-md-offset-1">
+        <div class="col-md-9 col-md-offset-1">
           <h2>Contact</h2>
 <p>Email: yagan@berkeley.edu</p>
 <p>Apply to be a fellow...</p>
@@ -58,7 +62,7 @@
       <p class="lead">The Role of Colleges in Intergenerational Mobility </p>
     </div>
     <div class="col-md-9">
-      <img class="img-responsive" src="/assets/project_coll_numbers.png">
+      <img class="img-responsive" src="assets/project_coll_numbers.png">
     </div>
   </div>
 </a>
