More changes to the hompage, added lecture notes -CM

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     <div class="container">
 
       <div class="page-header">
-         <h1>Danny Yagan 
-           <small>Assistant Professor</small>
-           <div align="right"> <img span class="img-responsive" src="assets/ucb_logo.png"> </div>
-           </h1>
-      </div>
+         <h1>Danny Yagan
+           <small>Assistant Professor</small> 
+            <img align="right" class="img-responsive" src="assets/ucb_logo.png"></h1>
+       </div>
       <div class="row">
         <div class="col-md-2">
           <img class="img-responsive" src="assets/headshot.jpg">
@@ -49,7 +48,7 @@
         <div class="col-md-9 col-md-offset-1">
           <h2>Contact</h2>
 <p>Email: yagan@berkeley.edu</p>
-<p>Apply to be a fellow...</p>
+<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a fellow...</a></p>
 
 <hr> 
 
