--- a/lectures/index.html
+++ b/lectures/index.html
@@ -44,6 +44,38 @@
         </div>
         <div class="col-md-8 col-md-offset-1">
           <h2>Lectures</h2>
+          <br>
+          <h4 id="gradpublic"><strong>BERKELEY ECONOMICS 230A: GRADUATE PUBLIC ECONOMICS (Fall 2016)</strong> </h4>
+          <hr>
+          <p>This is the second unit of the Berkeley PhD sequence in public sector economics. The <a href="http://eml.berkeley.edu/~webfac/auerbach/e230a_f16/e230a_f16.shtml">first unit</a> is taught by Alan Auerbach, the <a href="http://eml.berkeley.edu/~saez/course/course.html"> third unit </a> is taught by Emmanuel Saez, and the fourth unit is taught by Gabriel Zucman. My unit covers capital taxation, social insurance, and public economics across space.</p> 
+          <ul style="list-style: none;">
+          <li><a href="https://eml.berkeley.edu/~yagan/teaching/230A_CourseInformation.pdf">Course information</a></li>
+          
+
+          <li><a href="https://eml.berkeley.edu/~yagan/teaching/230A_ReadingList.pdf">Reading list</a></li>
+
+          <li><a href="http://eml.berkeley.edu/~yagan/teaching/230A_Slides.pdf">Slides</a> [large download] covering my six lectures:</li>
+          <ol>
+              <li> Optimal Capital Taxation </li>
+              <li> Actual Capital Taxation: Investment </li>
+              <li> Actual Capital Taxation: Savings </li>
+              <li> Social Insurance [half of slides from Chetty-Bruich] </li>
+              <li> Local Public Finance </li>
+              <li> Place-Based Policies </li>
+            </ol>
+           </ul>
+           <p>I am indebted to Alan Auerbach, Raj Chetty, Mikhail Golosov, Emmanuel Saez, and others whose lectures and comments are reflected in my slides.</p>
+           <hr>
+           <br>
+
+          <h4 id="undergradpublic"><strong>BERKELEY ECONOMICS 131: UNDERGRADUATE PUBLIC ECONOMICS (Fall 2016)</strong> </h4>
+          <hr>
+          <p>This course focuses on the role of the government in the economy. The aim is to provide an understanding of the reasons for government intervention in the economy, analyzing the benefits of possible government policies, and the response of economic agents to the government's actions. The course covers tax policy and inequality, social insurance programs, public goods, environmental protection, and the interaction between different levels of government. Special emphasis is on current policy issues such as social security reform, health care reform, income tax reform, and budget deficits.</p>
+
+          <p>All course materials are posted on the internal bCourses course website. Berkeley students: email Jonathan Holmes (jholmes@berkeley.edu) and Francis Wong (francisawong@gmail.com) to be added to the bCourses site.</p>
+          <hr>
+          <br>
+
         </div>
       </div>
     </div>
