More tweaks to the homepage

--- a/index.html
+++ b/index.html
@@ -48,26 +48,24 @@
         <div class="col-md-9 col-md-offset-1">
           <h2>Contact</h2>
 <p>Email: yagan@berkeley.edu</p>
-<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a fellow...</a></p>
+<p>Office:  647 Evans Hall </p>
+<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow (full-year research assistant) in my research group</a></p>
 
 <hr> 
 
 <h2>Recent projects</h2>
 
 <a href="/research#mobility">
-  <div class="row">
-    <div class="col-md-3">
-      <h4>Mobility Report Cards</h4>
-      <p class="lead">The Role of Colleges in Intergenerational Mobility </p>
-    </div>
-    <div class="col-md-9">
+      <p class="lead"><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </p>
       <img class="img-responsive" src="assets/project_coll_numbers.png">
-    </div>
-  </div>
 </a>
         </div>
       </div>
     </div>
+
+    <br>
+    <hr>
+
   </body>
 
   <script type="text/javascript">
