--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2>Contact</h2>
 <p>Email: yagan@berkeley.edu</p>
 <p>Office:  647 Evans Hall </p>
-<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow (full-year research assistant) in my research group</a></p>
+<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow </a> (full-year research assistant) in my research group</p>
 
 <hr> 
 
