--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="nav nav-pills nav-stacked">
             <li id="home"><a href="/">Home</a></li>
             <!-- <li id="bio"><a href="/bio/">Bio</a></li> -->
-            <li><a href="">CV</a></li>
+            <li><a href="https://eml.berkeley.edu/~yagan/cv.pdf">CV</a></li>
             <li id="research"><a href="/research/">Research</a></li>
             <li id="lectures"><a href="/lectures/">Lectures</a></li>
           </ul>
