reformat recent projects

--- a/index.html
+++ b/index.html
@@ -45,26 +45,31 @@
           </ul>
 
         </div>
-        <div class="col-md-9 col-md-offset-1">
+
+
+      <div class="col-md-9 col-md-offset-1">
           <h2>Contact</h2>
-<p>Email: yagan@berkeley.edu</p>
-<p>Office:  647 Evans Hall </p>
-<p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow </a> (full-year research assistant) in my research group</p>
-
-<hr> 
-
-<h2>Recent projects</h2>
-
-<a href="/research#mobility">
-      <p class="lead"><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </p>
-      <img class="img-responsive" src="assets/project_coll_numbers.png">
-</a>
-        </div>
+          <p>Email: yagan@berkeley.edu</p>
+          <p>Office:  647 Evans Hall </p>
+          <p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow </a> (full-year research assistant) in my research group</p>
+          <hr>
       </div>
-    </div>
+ 
+    <div class="col-md-9 col-md-offset-1">
+      <h2>Recent projects</h2>
 
-    <br>
-    <hr>
+      <a href="/research#mobility">
+          <div class="row">
+            <div class = "col-md-4"> 
+              <p class="lead"><font size=4><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
+            </div>  
+          <div class = "col-10"> 
+            <img class="img-responsive" src="assets/project_coll_numbers.png" width="40%">
+          </div>  
+        </div>  
+    </div>  
+    </a> 
+  
 
   </body>
 
