Added High Res logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="page-header">
          <h1>Danny Yagan
            <small>Assistant Professor</small> 
-            <img align="right" class="img-responsive" src="assets/ucb_logo.png"></h1>
+            <img align="right" class="img-responsive" src="assets/logo_lg.png" width="25%"></h1>
        </div>
       <div class="row">
         <div class="col-md-2">
