--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="page-header">
          <h1>Danny Yagan
-           <small>Assistant Professor - Like a Boss</small> 
+           <small>Assistant Professor</small> 
             <img align="right" class="img-responsive" src="assets/ucb_logo.png"></h1>
        </div>
       <div class="row">
