Tweaks to the Homepage
Just to see how they look

--- a/index.html
+++ b/index.html
@@ -47,24 +47,24 @@
         </div>
 
 
-      <div class="col-md-9 col-md-offset-1">
-          <h2>Contact</h2>
+      <div class="col-md-9 col-md-offset-1.5">
+          <p><strong>Contact</strong></p>
           <p>Email: yagan@berkeley.edu</p>
           <p>Office:  647 Evans Hall </p>
           <p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow </a> (full-year research assistant) in my research group</p>
           <hr>
       </div>
  
-    <div class="col-md-9 col-md-offset-1">
-      <h2>Recent projects</h2>
+    <div class="col-md-9 col-md-offset-1.5">
+      <p><strong>Recent projects</strong></p>
 
       <a href="/research#mobility">
           <div class="row">
             <div class = "col-md-4"> 
-              <p class="lead"><font size=4><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
+              <p class="v-m" style="vertical-align:middle"><font size=3><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
             </div>  
           <div class = "col-10"> 
-            <img class="img-responsive" src="assets/project_coll_numbers.png" width="40%">
+            <img class="img-responsive" src="assets/project_coll_numbers.png" width="40%" style="border: 1px solid black;">
           </div>  
         </div>  
     </div>  
