--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <a href="/research#mobility">
           <div class="row">
             <div class = "col-md-4"> 
-              <p class="v-m" style="vertical-align:middle"><font size=3><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
+            <div class="v-m">
+              <p><font size=3><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
+            </div>  
             </div>  
           <div class = "col-10"> 
             <img class="img-responsive" src="assets/project_coll_numbers.png" width="40%" style="border: 1px solid black;">
