Homepage: Shrink titles, put recent projects in a table

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 
       <div class="col-md-9 col-md-offset-1.5">
+        <div style="text-align: center;">
           <p><strong>Contact</strong></p>
+        </div>  
           <p>Email: yagan@berkeley.edu</p>
           <p>Office:  647 Evans Hall </p>
           <p><a href="http://www.rajchetty.com/chettyfiles/Chettylab_fellows2017.pdf">Apply to be a pre-doctoral fellow </a> (full-year research assistant) in my research group</p>
@@ -56,22 +58,31 @@
       </div>
  
     <div class="col-md-9 col-md-offset-1.5">
+    <div style="text-align: center;">
       <p><strong>Recent projects</strong></p>
+     </div> 
 
-      <a href="/research#mobility">
-          <div class="row">
-            <div class = "col-md-4"> 
-            <div class="v-m">
-              <p><font size=3><a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a> </font></p>
-            </div>  
-            </div>  
-          <div class = "col-10"> 
-            <img class="img-responsive" src="assets/project_coll_numbers.png" width="40%" style="border: 1px solid black;">
-          </div>  
-        </div>  
-    </div>  
+    <a href="/research#mobility"> 
+      <td>
+        <table>
+        <tbody>
+        <tr>
+        <td width="1"> </td>
+        <td>
+          <div style="font-size: 14pt  font-weight:bold; text-align: center;">
+            <a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a>
+          </div>
+        </td>
+          <td align="bottom">
+            <a href="http://www.equality-of-opportunity.org/college" target="_blank"> 
+              <img class="img-responsive" src="assets/project_coll_numbers.png" width="80%" style="border: 1px solid black;"> 
+            </a>
+          </td>
+        </tr>
+      </tbody>
+      </table>
+      </td>
     </a> 
-  
 
   </body>
 
