--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
 
-      <div class="col-md-9 col-md-offset-1.5">
+      <div class="col-md-10 col-md-offset-1.5">
         <div style="text-align: center;">
           <p><strong>Contact</strong></p>
         </div>  
@@ -57,7 +57,7 @@
           <hr>
       </div>
  
-    <div class="col-md-9 col-md-offset-1.5">
+    <div class="col-md-10 col-md-offset-1.5">
     <div style="text-align: center;">
       <p><strong>Recent projects</strong></p>
      </div> 
@@ -67,13 +67,12 @@
         <table>
         <tbody>
         <tr>
-        <td width="1"> </td>
         <td>
-          <div style="font-size: 14pt  font-weight:bold; text-align: center;">
+          <div style="font-size: 14pt  font-weight:bold; text-align: left;">
             <a href="http://www.equality-of-opportunity.org/college/">Mobility Report Cards: The Role of Colleges in Intergenerational Mobility</a>
           </div>
         </td>
-          <td align="bottom">
+          <td align="center">
             <a href="http://www.equality-of-opportunity.org/college" target="_blank"> 
               <img class="img-responsive" src="assets/project_coll_numbers.png" width="80%" style="border: 1px solid black;"> 
             </a>
