--- a/research/index.html
+++ b/research/index.html
@@ -12,11 +12,13 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<!--<link rel="stylesheet" href="/css/test_css.css">-->
+
   <link rel="stylesheet" href="/css/main.css">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <style> .indented { padding-left: 25pt; padding-right: 0pt; line-height: 1.1} </style>
-<style> .divider {   margin: -5px; } </style>
+<style> .divider { margin: -5px; } </style>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -32,9 +34,9 @@
       <div class="row">
         <div class="col-md-3">
           <img class="img-responsive" src="/assets/headshot.jpg" width="90%">
-
+    
           <br />
-
+    
           <ul class="nav nav-pills nav-stacked">
             <li id="home"><a href="/">Home</a></li>
             <li id="bio"><a href="/bio/">Bio</a></li>
