Dynamic abstract testing

--- a/index.html
+++ b/index.html
@@ -85,55 +85,10 @@
 
     <div class="faq_container">
 			<div class="faq">
-				<div class="faq_question">Click to view data <b class="caret"></b></div>
+				<div class="faq_question">Click to view abstract <b class="caret"></b></div>
 					<div class="faq_answer_container" id="data_college">
 						<div class="faq_answer">
-							<div class="info" style="margin-top: -25px;">
-								<table class="table table-bordered">
-									<thead>
-										<tr>
-											<th>Data Description</th>
-											<th colspan="3" class="text-center">Download</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td style="width:76%">Online Data Table 1<br>Preferred Estimates of Access and Mobility Rates by College</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 2<br>Baseline Cross-Sectional Estimates by College</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 3<br>Baseline Longitudinal Estimates by College and Child's Cohort</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 4<br>Cross-Sectional Estimates by College: Heterogeneity by Gender and Alternative College and Income Definitions</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 5<br>Longitudinal Estimates by College and Cohort: Heterogeneity by Gender and Alternative College and Income Definitions</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 6<br>Cross-Sectional Statistics by College Tier and Parent Income Percentile</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 7<br>Cross-Sectional Statistics on Children’s Income Distributions by College Tier</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 8<br>Longitudinal Statistics by College Tier, Parent Income Ventile, and Cohort</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 9<br>Percentile Cutoffs for Parent and Child Income by Birth Cohort</td>
-										</tr>
-										<tr>
-											<td style="width:76%">Online Data Table 10<br>College Level Characteristics</td>
-										</tr>
-										<tr>
-										</tr>
-										<tr>
-											<td style="width:76%">Replication Code and Datasets</td>
-										</tr>
-								  </tbody>
-								</table>
+								Paste your abstract here + any formatting and whatever
 							</div>
 						</div>
 					</div>
