--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-<link rel="stylesheet" href="https://www.dyagan.github.io/css/main.css">
+<link rel="stylesheet" href="https://www.dyagan.github.io/css/main.css" type="text/css">
     
 
   </head>
